--- a/reset.css
+++ b/reset.css
@@ -1,1 +1,1 @@
-*{margin:0; padding:0;border:0;font-size:100%;font:inherit;}
+body{margin:0; padding:0;border:0;font-size:100%;font:inherit;line-height:1;}
