--- a/reset.css
+++ b/reset.css
@@ -1,1 +1,1 @@
-body{margin:0; padding:0;border:0;font-size:100%;font:inherit;line-height:1;}
+/*Poorman Reset*/body{margin:0; padding:0;border:0;font-size:100%;font:inherit;line-height:1;}
