--- a/reset.css
+++ b/reset.css
@@ -1,1 +1,1 @@
-/*Poorman CSS Reset*/body{margin:0; padding:0;border:0;font-size:100%;font:inherit;line-height:1;}
+/*Goodman CSS Reset*/body{margin:0; padding:0;border:0;font-size:100%;font:inherit;line-height:1;}
